Added Gemini Api Calling Features

--- a/Components/MessageHeader.razor
+++ b/Components/MessageHeader.razor
@@ -5,7 +5,7 @@
         <div class="chat-avatar me-3">A</div>
         <div>
             <h5 class="mb-0">@Model.Name</h5>
-            <small class="text-muted">@Model.SystemPrompt.Substring(0,15) ...</small>
+            <small class="text-muted">@Model.SystemPrompt.Substring(0, 15) ...</small>
         </div>
     </div>
     <div>
