--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -8,61 +8,7 @@
             <PersonaListComponent Model="_personaModels"/>
         </div> 
         <div class="col-md-8 col-lg-9 p-0 main-chat">
-            <MessageHeader Model="_selectedPersona"/>
-            <MessageInput/>
+            <MessageComponent Model="_selectedPersona"/>
         </div>
     </div>
 </div>
-
-@code{
-
-    readonly List<PersonaModel> _personaModels =
-    [
-        new PersonaModel()
-        {
-            UnreadCount = 0,
-            Name = "John Doe",
-            LastMessage = "Hi there! How are you doing?",
-            Time = DateTime.Now,
-            Avatar = "J",
-        },
-        new PersonaModel()
-        {
-            UnreadCount = 2,
-            Name = "Jane Smith",
-            LastMessage = "Let's catch up later.",
-            Time = DateTime.Now.AddMinutes(-10),
-            Avatar = "JS",
-        },
-    ];
-
-    readonly List<MessageModel> _messageModels =
-    [
-        new MessageModel()
-        {
-            MessageType = "sent",
-            MessageText = "Hello! How can I assist you today?",
-            SentAt = DateTime.Now.AddMinutes(-5),
-        },
-        new MessageModel()
-        {
-            MessageType = "received",
-            MessageText = "I'm looking for some information on Blazor components.",
-            SentAt = DateTime.Now.AddMinutes(-3),
-        },
-    ];
-    
-    PersonaModel _selectedPersona = new PersonaModel()
-    {
-        Name = "John Doe",
-        SystemPrompt = "You are a helpful assistant.",
-        Avatar = "JD"
-    };
-
-    protected override Task OnInitializedAsync()
-    {
-        _selectedPersona.MessageList = _messageModels;
-        return base.OnInitializedAsync();
-    }
-
-}
