--- a/Components/MessageInput.razor
+++ b/Components/MessageInput.razor
@@ -1,6 +1,32 @@
+@if (IsLoading)
+{
+    <div class="text-center">
+        <div class="spinner-grow text-primary" role="status">
+        </div>
+        <div class="spinner-grow text-secondary" role="status">
+        </div>
+        <div class="spinner-grow text-success" role="status">
+        </div>
+        <div class="spinner-grow text-danger" role="status">
+        </div>
+        <div class="spinner-grow text-warning" role="status">
+        </div>
+        <div class="spinner-grow text-info" role="status">
+        </div>
+        <div class="spinner-grow text-light" role="status">
+        </div>
+        <div class="spinner-grow text-dark" role="status">
+        </div>
+    </div>
+}
 <div class="input-container d-flex align-items-center">
     <button class="icon-btn"><i class="bi bi-emoji-smile"></i></button>
     <button class="icon-btn"><i class="bi bi-paperclip"></i></button>
-    <input type="text" class="message-input me-2" placeholder="Type a message">
-    <button class="icon-btn"><i class="bi bi-mic"></i></button>
+    <input type="text" 
+           class="message-input me-2" 
+           placeholder="Type a message" 
+           @bind="_messageModel.MessageText">
+    <button class="icon-btn" @onclick="Send">
+        <i class="bi bi-send" ></i>
+    </button>
 </div>
