--- a/Components/Persona.razor
+++ b/Components/Persona.razor
@@ -1,5 +1,6 @@
 @using ProfiledAi.Models
-<div class="@($"chat-item {@Model.IsActive}")">
+@using ProfiledAi.Utils
+<div class="@($"chat-item {Model.IsActive}")" @onclick="HideSidebarMobile">
     <div class="chat-avatar">@Model.Avatar</div>
     <div class="chat-info">
         <div class="d-flex justify-content-between">
@@ -17,5 +18,13 @@
 </div>
 
 @code{
-    [Parameter,EditorRequired] public PersonaModel Model { get; set; }
+    [Parameter, EditorRequired] public PersonaModel Model { get; set; } = null!;
+    [Parameter] public EventCallback<PersonaModel> UpdateActiveNess { get; set; } 
+    
+
+    private async Task HideSidebarMobile()
+    {
+        Model.IsActive = Constant.Active;
+        await UpdateActiveNess.InvokeAsync(Model);
+    }
 }
