--- a/Components/PersonaHeader.razor
+++ b/Components/PersonaHeader.razor
@@ -1,7 +1,8 @@
+@using ProfiledAi.Models
 @using ProfiledAi.Utils
 <div class="sidebar-header d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center">
-        <div class="profile-icon">J</div>
+        <div class="profile-icon" @onclick="ShowSidebarMobile">J</div>
     </div>
     <div>
         <button class="icon-btn" data-bs-toggle="modal" data-bs-target="@Constant.GetGeminiApiKeyInputModel().GetCallerModelId()">
@@ -10,3 +11,16 @@
     </div>
 </div>
 <GeminiApikeyModal/>
+@code {
+
+    [Inject] private IJSRuntime  JsRuntime { get; set; } = null!; 
+    private async Task ShowSidebarMobile()
+    {
+        var size = await JsRuntime.InvokeAsync<WindowSize>("getWindowSize");
+        Console.WriteLine($"Width: {size.Width}, Height: {size.Height}");
+        if (size.Width < 768)
+        {
+            
+        }
+    } 
+}
