--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -2,13 +2,22 @@
 @using ProfiledAi.Components
  
 @using ProfiledAi.Models
+@using ProfiledAi.Utils
 <div class="container-fluid app-container bg-white">
     <div class="row h-100"> 
-        <div class="col-md-4 col-lg-3 p-0 sidebar active">
-            <PersonaListComponent Model="_personaModels"/>
+        <div class="col-md-4 col-lg-3 p-0 sidebar @_siderBar">
+            <PersonaListComponent Model="_personaModels"  SidebarIsActive="SideBarVisible"/>
         </div> 
         <div class="col-md-8 col-lg-9 p-0 main-chat">
             <MessageComponent Model="_selectedPersona"/>
         </div>
     </div>
 </div>
+
+@code{
+    private string _siderBar=Constant.Active;
+    void SideBarVisible(string active)
+    {
+        _siderBar = active;
+    }
+}
