Local Storage Implemetation

--- a/Components/GeminiApikeyModal.razor
+++ b/Components/GeminiApikeyModal.razor
@@ -1,4 +1,6 @@
 @using ProfiledAi.Models
+@using ProfiledAi.Models.CacheModel
+@using ProfiledAi.Services
 @using ProfiledAi.Utils
 <div class="modal fade" id="@_model.ModelId" tabindex="-1" aria-labelledby="@_model.AriaLabelledby" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -10,7 +12,7 @@
             <div class="modal-body">
                 <form id="whatsappForm">
                     <div class="mb-3">
-                        <input type="password" class="form-control" id="messageInput" @bind="@_apiKey" placeholder="@_model.PlaceHolder" required>
+                        <input type="password" class="form-control" id="messageInput" @bind-value="@_apiKey" placeholder="@_model.PlaceHolder" required>
                     </div>
                 </form>
             </div>
@@ -21,15 +23,20 @@
     </div>
 </div>
 @code{
+    [Inject] public LocalStorageCaching LocalStorageCaching { get; set; } = null!;
     private readonly PopUpModel _model = Constant.GetGeminiApiKeyInputModel();
-    private string _apiKey = "";
-
-    private void SaveApiKey()
+    private string _apiKey = Constant.ApiKey;
+    private async Task SaveApiKey()
     {
         if (string.IsNullOrWhiteSpace(_apiKey))
         {
             return;
         }
         Constant.ApiKey = _apiKey;
+        var geminiApiKeyCache = new GeminiApiKeyCacheModel
+        {
+            ApiKey = _apiKey,
+        };
+        await LocalStorageCaching.SetApiKeyAsync(GeminiApiKeyCacheModel.GeminiApiKeyCache, geminiApiKeyCache);
     }
 }
