--- a/Components/MessageComponent.razor
+++ b/Components/MessageComponent.razor
@@ -1,13 +1,18 @@
 @using ProfiledAi.Models
-<MessageHeader Model="Model"/>
+<MessageHeader Model="Model" ToggleClass="SidebarVisible"/>
 <MessageInput Model="Model" OnChange="UpdateModel"/>
 
 @code {
     [Parameter, EditorRequired] public PersonaModel Model { get; set; } = null!;
+    [Parameter] public EventCallback<string> ToggleSideBarClass { get; set; }
 
     public void UpdateModel(PersonaModel model)
     {
         Model = model;
         StateHasChanged();
+    }
+    public async Task SidebarVisible(string active)
+    { 
+        await ToggleSideBarClass.InvokeAsync(active);
     }
 }
