--- a/Components/MessageInput.razor
+++ b/Components/MessageInput.razor
@@ -1,27 +1,18 @@
 @if (IsLoading)
 {
     <div class="text-center">
-        <div class="spinner-grow text-primary" role="status">
-        </div>
-        <div class="spinner-grow text-secondary" role="status">
-        </div>
-        <div class="spinner-grow text-success" role="status">
-        </div>
-        <div class="spinner-grow text-danger" role="status">
-        </div>
-        <div class="spinner-grow text-warning" role="status">
-        </div>
-        <div class="spinner-grow text-info" role="status">
-        </div>
-        <div class="spinner-grow text-light" role="status">
-        </div>
-        <div class="spinner-grow text-dark" role="status">
-        </div>
+        <div class="spinner-grow text-primary delay-0" role="status"></div>
+        <div class="spinner-grow text-secondary delay-1" role="status"></div>
+        <div class="spinner-grow text-success delay-2" role="status"></div>
+        <div class="spinner-grow text-danger delay-3" role="status"></div>
+        <div class="spinner-grow text-warning delay-4" role="status"></div>
+        <div class="spinner-grow text-info delay-5" role="status"></div>
+        <div class="spinner-grow text-light delay-6" role="status"></div>
     </div>
 }
 <div class="input-container d-flex align-items-center">
-    <button class="icon-btn"><i class="bi bi-emoji-smile"></i></button>
-    <button class="icon-btn"><i class="bi bi-paperclip"></i></button>
+    @* <button class="icon-btn"><i class="bi bi-emoji-smile"></i></button> *@
+    @* <button class="icon-btn"><i class="bi bi-paperclip"></i></button> *@
     <input type="text" 
            class="message-input me-2" 
            placeholder="Type a message" 
