--- a/Layout/MainLayout.razor
+++ b/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
-﻿@inherits LayoutComponentBase
-
+﻿@using ProfiledAi.Components
+@inherits LayoutComponentBase
+<CahcheModelComponents/>
 @Body
 <GeminiApikeyModal/>
