--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -5,19 +5,24 @@
 @using ProfiledAi.Utils
 <div class="container-fluid app-container bg-white">
     <div class="row h-100"> 
-        <div class="col-md-4 col-lg-3 p-0 sidebar @_siderBar">
+        <div class="@_siderBarClass">
             <PersonaListComponent Model="_personaModels"  SidebarIsActive="SideBarVisible"/>
         </div> 
         <div class="col-md-8 col-lg-9 p-0 main-chat">
-            <MessageComponent Model="_selectedPersona"/>
+            <MessageComponent Model="_selectedPersona" ToggleSideBarClass="ToggleSideBar"/>
         </div>
     </div>
 </div>
 
 @code{
-    private string _siderBar=Constant.Active;
+    private string _siderBarClass = $"col-md-4 col-lg-3 p-0 sidebar {Constant.Active}";
     void SideBarVisible(string active)
     {
-        _siderBar = active;
+        _siderBarClass = $"col-md-4 col-lg-3 p-0 sidebar {active}";
+    }
+    void ToggleSideBar(string active)
+    {
+        _siderBarClass = Constant.ToggleClass(_siderBarClass, active);
+        StateHasChanged();
     }
 }
