--- a/Layout/MainLayout.razor
+++ b/Layout/MainLayout.razor
@@ -1,5 +1,7 @@
 ﻿@using ProfiledAi.Components
+@using ProfiledAi.Components.PopUpModal
 @inherits LayoutComponentBase
 <CahcheModelComponents/>
 @Body
 <GeminiApikeyModal/>
+<AddProfileComponent/>
