--- a/Components/PersonaHeader.razor
+++ b/Components/PersonaHeader.razor
@@ -5,8 +5,11 @@
         <div class="profile-icon" >J</div>
     </div>
     <div>
+        <button class="icon-btn" data-bs-toggle="modal" data-bs-target="@Constant.GetProfileInputModel().GetCallerModelId()">
+            <i class="bi bi-person-add"></i>
+        </button>
         <button class="icon-btn" data-bs-toggle="modal" data-bs-target="@Constant.GetGeminiApiKeyInputModel().GetCallerModelId()">
-            <i class="bi bi-gear" ></i>
+            <i class="bi bi-gear"></i>
         </button>
     </div>
 </div>
