--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -1,28 +1,13 @@
 ﻿@page "/"
 @using ProfiledAi.Components
- 
-@using ProfiledAi.Models
 @using ProfiledAi.Utils
 <div class="container-fluid app-container bg-white">
     <div class="row h-100"> 
         <div class="@_siderBarClass">
-            <PersonaListComponent Model="_personaModels"  SidebarIsActive="SideBarVisible"/>
+            <PersonaListComponent Model="_personaModels"  SidebarIsActive="SideBarVisible" SelectedPersonaModel="PersonalModelSelectionChanged"/>
         </div> 
         <div class="col-md-8 col-lg-9 p-0 main-chat">
             <MessageComponent Model="_selectedPersona" ToggleSideBarClass="ToggleSideBar"/>
         </div>
     </div>
 </div>
-
-@code{
-    private string _siderBarClass = $"col-md-4 col-lg-3 p-0 sidebar {Constant.Active}";
-    void SideBarVisible(string active)
-    {
-        _siderBarClass = $"col-md-4 col-lg-3 p-0 sidebar {active}";
-    }
-    void ToggleSideBar(string active)
-    {
-        _siderBarClass = Constant.ToggleClass(_siderBarClass, active);
-        StateHasChanged();
-    }
-}
